commit latest code

--- a/app/src/main/res/layout/activity_basic_info.xml
+++ b/app/src/main/res/layout/activity_basic_info.xml
@@ -43,15 +43,30 @@
                     android:orientation="vertical"
                     android:padding="@dimen/padding_10">
 
-                    <com.example.hb.invest.invest.utiles.views.CustomTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="18sp"
-                        android:text="Basic Information"
-                        android:textColor="@color/white"
-                        app:font_type="regular"
-                        android:padding="@dimen/padding_15"/>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/ivBack"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/btn_back"
+                            android:layout_centerVertical="true"
+                            android:padding="@dimen/padding_5"/>
+
+                        <com.example.hb.invest.invest.utiles.views.CustomTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:textSize="18sp"
+                            android:text="Basic Information"
+                            android:textColor="@color/white"
+                            android:layout_centerInParent="true"
+                            app:font_type="regular"
+                            android:padding="@dimen/padding_15"/>
+
+                    </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -193,7 +208,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
-                            android:text="Service Tax : "
+                            android:text="Service Fee : "
                             android:textColor="@android:color/black"
                             android:textSize="@dimen/text_14"
                             app:font_type="medium" />
