--- a/app/src/main/res/layout/activity_electricity.xml
+++ b/app/src/main/res/layout/activity_electricity.xml
@@ -54,12 +54,30 @@
                 app:font_type="regular" />
 
             <com.example.hb.invest.invest.utiles.views.CustomEditText
+                android:id="@+id/etNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/input_box_s1c"
+                android:ellipsize="end"
+                android:hint="2609xxxxxxxx"
+                android:paddingLeft="@dimen/padding_20"
+                android:inputType="phone"
+                android:textColor="@android:color/black"
+                android:textColorHint="@color/light_gray"
+                android:layout_marginTop="@dimen/padding_20"
+                android:paddingRight="@dimen/padding_15"
+                android:singleLine="true"
+                android:textSize="@dimen/text_16"
+                app:font_type="regular" />
+
+            <com.example.hb.invest.invest.utiles.views.CustomEditText
                 android:id="@+id/etAmount"
                 android:inputType="number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/padding_30"
+                android:layout_marginTop="@dimen/padding_20"
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/light_gray"
                 android:background="@drawable/input_box_s1c"
