--- a/app/src/main/res/layout/activity_add_beneficialy.xml
+++ b/app/src/main/res/layout/activity_add_beneficialy.xml
@@ -5,6 +5,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/app_color"
         android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
@@ -23,21 +24,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:background="#99000000"
             android:padding="@dimen/padding_30">
 
             <com.example.hb.invest.invest.utiles.views.CustomTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Category Lists"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="@dimen/text_16"
-                app:font_type="medium" />
+                app:font_type="regular" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding_5"
-                android:background="@drawable/input_box_s1c">
+                android:background="@drawable/input_box_s1">
 
                 <Spinner
                     android:id="@+id/categorySpinner"
@@ -56,15 +58,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding_20"
                 android:text="Utility Lists"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="@dimen/text_16"
-                app:font_type="medium" />
+                app:font_type="regular" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding_5"
-                android:background="@drawable/input_box_s1c">
+                android:background="@drawable/input_box_s1">
 
                 <Spinner
                     android:id="@+id/utilitySpinner"
