--- a/app/src/main/res/layout/activity_domestic_taxes.xml
+++ b/app/src/main/res/layout/activity_domestic_taxes.xml
@@ -24,7 +24,7 @@
             android:layout_height="@dimen/padding_100"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/padding_40"
-            android:src="@drawable/land_black"
+            android:src="@drawable/tax_black"
             android:visibility="visible" />
 
         <LinearLayout
@@ -48,18 +48,36 @@
                     android:layout_marginLeft="@dimen/padding_20"
                     android:gravity="center"
                     android:text="Select oprater"
-                    android:textSize="@dimen/text_16"></Spinner>
+                    android:textSize="@dimen/text_16" />
 
             </LinearLayout>
+
+            <com.example.hb.invest.invest.utiles.views.CustomEditText
+                android:id="@+id/etNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/input_box_s1c"
+                android:layout_marginTop="@dimen/padding_20"
+                android:ellipsize="end"
+                android:hint="2609xxxxxxxx"
+                android:paddingLeft="@dimen/padding_20"
+                android:inputType="phone"
+                android:textColor="@android:color/black"
+                android:textColorHint="@color/light_gray"
+                android:paddingRight="@dimen/padding_15"
+                android:singleLine="true"
+                android:textSize="@dimen/text_16"
+                app:font_type="regular" />
 
             <com.example.hb.invest.invest.utiles.views.CustomEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/padding_30"
+                android:layout_marginTop="@dimen/padding_20"
                 android:background="@drawable/input_box_s1c"
                 android:ellipsize="end"
-                android:hint="Enter account number"
+                android:hint="Enter Payment Reference Number (PRN)"
                 android:paddingLeft="@dimen/padding_20"
                 android:inputType="number"
                 android:textColor="@android:color/black"
