--- a/app/src/main/res/layout/activity_pay_tv.xml
+++ b/app/src/main/res/layout/activity_pay_tv.xml
@@ -37,8 +37,8 @@
                 android:layout_marginLeft="@dimen/padding_40"
                 android:layout_marginRight="@dimen/padding_40"
                 android:layout_marginTop="@dimen/padding_40"
-                android:paddingBottom="@dimen/padding_50"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/padding_50">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -58,11 +58,29 @@
                 </LinearLayout>
 
                 <com.example.hb.invest.invest.utiles.views.CustomEditText
+                    android:id="@+id/etNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/padding_20"
+                    android:background="@drawable/input_box_s1c"
+                    android:ellipsize="end"
+                    android:hint="2609xxxxxxxx"
+                    android:inputType="phone"
+                    android:paddingLeft="@dimen/padding_20"
+                    android:paddingRight="@dimen/padding_15"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="@color/light_gray"
+                    android:textSize="@dimen/text_16"
+                    app:font_type="regular" />
+
+                <com.example.hb.invest.invest.utiles.views.CustomEditText
                     android:id="@+id/etAccountNo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/padding_30"
+                    android:layout_marginTop="@dimen/padding_20"
                     android:background="@drawable/input_box_s1c"
                     android:ellipsize="end"
                     android:hint="Enter account number"
@@ -95,9 +113,9 @@
                 <LinearLayout
                     android:id="@+id/llView"
                     android:layout_width="match_parent"
-                    android:visibility="visible"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="visible">
 
                     <com.example.hb.invest.invest.utiles.views.CustomTextView
                         android:id="@+id/tvBill"
