--- a/app/src/main/res/layout/activity_water.xml
+++ b/app/src/main/res/layout/activity_water.xml
@@ -48,9 +48,27 @@
                     android:layout_marginLeft="@dimen/padding_20"
                     android:gravity="center"
                     android:text="Select oprater"
-                    android:textSize="@dimen/text_16"></Spinner>
+                    android:textSize="@dimen/text_16" />
 
             </LinearLayout>
+
+            <com.example.hb.invest.invest.utiles.views.CustomEditText
+                android:id="@+id/etNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/input_box_s1c"
+                android:ellipsize="end"
+                android:hint="2609xxxxxxxx"
+                android:paddingLeft="@dimen/padding_20"
+                android:inputType="phone"
+                android:textColor="@android:color/black"
+                android:layout_marginTop="@dimen/padding_20"
+                android:textColorHint="@color/light_gray"
+                android:paddingRight="@dimen/padding_15"
+                android:singleLine="true"
+                android:textSize="@dimen/text_16"
+                app:font_type="regular" />
 
             <com.example.hb.invest.invest.utiles.views.CustomEditText
                 android:layout_width="match_parent"
@@ -59,7 +77,7 @@
                 android:layout_marginTop="@dimen/padding_20"
                 android:background="@drawable/input_box_s1c"
                 android:ellipsize="end"
-                android:hint="Telephone number (With STD code)"
+                android:hint="Enter Account Number"
                 android:paddingLeft="@dimen/padding_20"
                 android:paddingRight="@dimen/padding_15"
                 android:inputType="number"
