--- a/app/src/main/res/layout/row_home.xml
+++ b/app/src/main/res/layout/row_home.xml
@@ -37,7 +37,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/padding_5"
             android:text="Name"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="@dimen/text_15"
             app:font_type="regular" />
 
