--- a/app/src/main/res/layout/row_order.xml
+++ b/app/src/main/res/layout/row_order.xml
@@ -30,8 +30,10 @@
                     android:layout_height="@dimen/padding_50"
                     android:background="@drawable/left_rounded"
                     android:gravity="center"
+                    android:text="484"
                     android:textColor="@android:color/black"
-                    android:textSize="@dimen/text_22"
+                    android:textSize="@dimen/text_18"
+                    android:singleLine="true"
                     app:font_type="medium" />
 
                 <LinearLayout
@@ -237,6 +239,55 @@
                             android:textSize="@dimen/text_14"
                             app:font_type="regular" />
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/padding_5"
+                        android:orientation="horizontal">
+
+                        <com.example.hb.invest.invest.utiles.views.CustomTextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.4"
+                            android:text="Foreign TXN No : "
+                            android:textSize="@dimen/text_14"
+                            app:font_type="medium" />
+
+                        <com.example.hb.invest.invest.utiles.views.CustomTextView
+                            android:id="@+id/tvForeignNo"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.6"
+                            android:singleLine="true"
+                            android:textSize="@dimen/text_14"
+                            app:font_type="regular" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/padding_5"
+                        android:orientation="horizontal">
+
+                        <com.example.hb.invest.invest.utiles.views.CustomTextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.4"
+                            android:text="Payment Status : "
+                            android:textSize="@dimen/text_14"
+                            app:font_type="medium" />
+
+                        <com.example.hb.invest.invest.utiles.views.CustomTextView
+                            android:id="@+id/tvPStatus"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.6"
+                            android:singleLine="true"
+                            android:textSize="@dimen/text_14"
+                            app:font_type="regular" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
                 <com.example.hb.invest.invest.utiles.views.CustomTextView
