--- a/app/src/main/res/layout/activity_mobile.xml
+++ b/app/src/main/res/layout/activity_mobile.xml
@@ -78,6 +78,7 @@
                 android:hint="2609xxxxxxxx"
                 android:paddingLeft="@dimen/padding_20"
                 android:inputType="phone"
+                android:maxLength="12"
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/light_gray"
                 android:paddingRight="@dimen/padding_15"
