--- a/app/src/main/res/layout/activity_pay_tv.xml
+++ b/app/src/main/res/layout/activity_pay_tv.xml
@@ -69,6 +69,7 @@
                     android:inputType="phone"
                     android:paddingLeft="@dimen/padding_20"
                     android:paddingRight="@dimen/padding_15"
+                    android:maxLength="12"
                     android:singleLine="true"
                     android:textColor="@android:color/black"
                     android:textColorHint="@color/light_gray"
